create css breakpoints

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <body>
         <!--=============== HEADER PROFILE ===============-->
         <header class="profile container">
+            <!-- theme button -->
+            <i class="ri-moon-line change-theme" id="theme-button"></i>
+
             <div class="profile__container grid">
                 <div class="profile__data">
                     <div class="profile__border">
@@ -240,7 +243,8 @@
 
         <!--=============== FOOTER ===============-->
         <footer class="footer container">
-            
+            <span class="footer__copy"> 
+                @Rachelharu.</span>
         </footer>
 
         <!--=============== SCROLLREVEAL ===============-->
