--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Mini portfolio website - Bedimcode</title>
+        <title>Rachel's portfolio</title>
     </head>
     <body>
         <!--=============== HEADER PROFILE ===============-->
@@ -55,9 +55,7 @@
                     <!-- CV insert  -->
                     <a download="" href="assets/pdf/Giannell-Cv.pdf" 
                     class="button">Download CV <i class="ri-file-download-line"></i>
-                    </a>
-
-                    
+                    </a>   
                 </div>
             </div>
         </header>
@@ -151,7 +149,7 @@
                     <div class="skills__content grid" data-content id="skills">
                         <div class="skills__area">
                             <h3 class="skills__title">
-                                Web Developer
+                                Web Developement
                             </h3>
 
                             <div class="skills__box">
