--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </footer>
 
         <!--=============== SCROLLREVEAL ===============-->
-        <script src=""></script>
+        <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--=============== MAIN JS ===============-->
         <script src="/assets/js/main.js"></script>
