--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <section class="filters container">
                 <!--=============== FILTERS TABS ===============-->
                 <ul class="filters__content">
-                    <button class="filters__button" data-target="#projects">
+                    <button class="filters__button filter-tab-active" data-target="#projects">
                         Projects
                     </button>
                     <button class="filters__button" data-target="#skills">
@@ -75,7 +75,7 @@
 
                 <div class="filters__sections">
                     <!--=============== PROJECTS ===============-->
-                    <div class="projects__content grid" data-content id="projects">
+                    <div class="projects__content grid filters__active" data-content id="projects">
                         <article class="projects__card">
                             <img src="assets/img/project1.jpg" alt="" class="projects__img" />
 
@@ -89,7 +89,10 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="projects__card">
+
+                        <!-- PLACEHOLDERS -->
+
+                         <!-- <article class="projects__card"> 
                             <img src="assets/img/project2.jpg" alt="" class="projects__img" />
 
                             <div class="projects__modal">
@@ -143,8 +146,8 @@
                                     </a>
                                 </div>
                             </div>
-                        </article>
-                    </div> 
+                        </article> -->
+                    </div>
                     <!--=============== SKILLS ===============-->
                     <div class="skills__content grid" data-content id="skills">
                         <div class="skills__area">
@@ -244,7 +247,7 @@
             <span class="footer__copy"> 
                 @Rachelharu.</span>
         </footer>
-
+       
         <!--=============== SCROLLREVEAL ===============-->
         <script src="https://unpkg.com/scrollreveal"></script>
 
