--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Web</span>
-                                    <h3 class="projects__title">Payment Site</h3>
+                                    <span class="projects__subtitle"></span>
+                                    <h3 class="projects__title">game lookup</h3>
                                     <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
