update project details

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle"></span>
+                                    <span class="projects__subtitle">html css javascript </span>
                                     <h3 class="projects__title">game lookup</h3>
                                     <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
