--- a/index.html
+++ b/index.html
@@ -83,30 +83,30 @@
                                 <div>
                                     <span class="projects__subtitle">html css javascript </span>
                                     <h3 class="projects__title">game lookup</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a href="https://game-lookup.vercel.app/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
                             </div>
                         </article>
 
-                        <!-- PLACEHOLDERS -->
-
-                         <!-- <article class="projects__card"> 
+                         <article class="projects__card"> 
                             <img src="assets/img/project2.jpg" alt="" class="projects__img" />
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Web</span>
-                                    <h3 class="projects__title">Portfolio</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <span class="projects__subtitle">html css javascript</span>
+                                    <h3 class="projects__title">signup form</h3>
+                                    <a href="https://signup-form-azure-eta.vercel.app/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
                             </div>
                         </article>
+                        
+                        <!-- PLACEHOLDERS -->
 
-                        <article class="projects__card">
+                        <!-- <article class="projects__card">
                             <img src="assets/img/project3.jpg" alt="" class="projects__img" />
 
                             <div class="projects__modal">
