--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                                     <a href="https://game-lookup.vercel.app/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
+                                    <a href="https://github.com/rachelharu/game-wiki-project" target="_blank" class="projects__button button button__small">
+                                        <i class="ri-github-fill"></i>
+                                    </a>    
                                 </div>
                             </div>
                         </article>
@@ -100,6 +103,9 @@
                                     <a href="https://signup-form-azure-eta.vercel.app/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
+                                    <a href="https://github.com/rachelharu/signup-form" target="_blank" class="projects__button button button__small">
+                                        <i class="ri-github-fill"></i>
+                                    </a>  
                                 </div>
                             </div>
                         </article>
