--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
                 <div class="profile__info grid">
                     <div class="profile__info-group">
                         <h3 class="profile__info-number">About Me</h3>
-                        <p class="profile__info-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lobortis, magna in euismod dictum, 
-                            nunc eros tincidunt nibh, ut auctor orci risus a lacus. Vestibulum et sem metus. Aliquam consequat, quam nec interdum cursus,
+                        <p class="profile__info-description">I've been developing web apps for 1.5 years mainly using HTML/CSS/Javascript, MongoDB, Express, React and Node.js.
+                            My love for computers and video games led me to an interest in wanting to be a software developer and
+                            I am in search of a place to put my passion and experience to use.
                             </p>
                         </div>
                 </div>
