--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
                 <div class="profile__info grid">
                     <div class="profile__info-group">
                         <h3 class="profile__info-number">About Me</h3>
-                        <p class="profile__info-description">I've been developing web apps for 1.5 years mainly using HTML/CSS/Javascript, MongoDB, Express, React and Node.js.
+                        <p class="profile__info-description">
                             My love for computers and video games led me to an interest in wanting to be a software developer and
-                            I am in search of a place to put my passion and experience to use.
+                            I've been developing web apps for 1.5 years. From the moment I spent all night working on my first project I knew that 
+                            I had to do everything I could to become a professional developer and
+                            I am in search of a place to put my passion and experience to use. If my skill set and goal driven personality would contribute to your team
+                            <a href="mailto:rachelharu9@gmail.com?subject=Hi%20Rachel!">contact me</a> lets work together!
                             </p>
                         </div>
                 </div>
