add animation for name

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <!-- theme button -->
             <i class="ri-moon-line change-theme" id="theme-button"></i>
 
-            <div class="profile__container grid">
+            <!-- <div class="profile__container grid">
                 <div class="profile__data">
                     <div class="profile__border">
                         <div class="class profile__perfil">
                             <img src="assets/img/perfil.png" alt="" >
                         </div>
-                    </div>
+                    </div> -->
                     
-                   <h2 class="profile__name">Rachel</h2>
+                   <h2 class="profile__name sybian">Rachel</h2>
                    <h3 class="profile__profession">Software Developer</h3>
                  <!-- social links -->
                    <ul class="profile__social">
@@ -46,11 +46,11 @@
                     <div class="profile__info-group">
                         <h3 class="profile__info-number">About Me</h3>
                         <p class="profile__info-description">
-                            My love for computers and video games led me to an interest in wanting to be a software developer and
+                            My love for computers and video games led me to an interest in software development and
                             I've been developing web apps for 1.5 years. From the moment I spent all night working on my first project I knew that 
                             I had to do everything I could to become a professional developer and
                             I am in search of a place to put my passion and experience to use. If my skill set and goal driven personality would contribute to your team
-                            <a href="mailto:rachelharu9@gmail.com?subject=Hi%20Rachel!">contact me</a> lets work together!
+                            <a href="mailto:rachelharu9@gmail.com?subject=Hi%20Rachel!">contact me</a> -lets work together!
                             </p>
                         </div>
                 </div>
