--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="https://github.com/rachelharu" target="_blank" class="profile__social-link">
                             <i class="ri-github-fill"></i>
                         </a>
-                        <a href="https://linkedin.com/in/raeu" class="profile__social-link">
+                        <a href="https://linkedin.com/in/raeu" target="_blank" class="profile__social-link">
                             <i class="ri-linkedin-box-line"></i>
                         </a>
                    </ul>
