--- a/index.html
+++ b/index.html
@@ -82,18 +82,18 @@
                     <div class="projects__content grid filters__active" data-content id="projects">
                         
                         <article class="projects__card">
-                            <img src="" alt="" class="projects__img" />
+                            <img src="assets/img/project3.jpg" alt="" class="projects__img" />
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">node.js express mongodb</span>
                                     <h3 class="projects__title">snack attack</h3>
                                     <a href="http://snackattack.onrender.com/" class="projects__button button button__small">
-                                        <i class="ri-link"><span style="font-family:poppins;"> link</span></i> 
+                                        <i class="ri-link"><span style="font-family:poppins; font-size:16px;" > link</span></i> 
                                         
                                     </a>
                                     <a href="https://github.com/rachelharu/ecomm-app" target="_blank" class="projects__button button button__small">
-                                        <i class="ri-github-fill"><span style="font-family:poppins;"> github page</span></i>
+                                        <i class="ri-github-fill"><span style="font-family:poppins; font-size:16px;"> github page</span></i>
                                     </a>    
                                 </div>
                             </div>
@@ -107,10 +107,10 @@
                                     <span class="projects__subtitle">html css javascript </span>
                                     <h3 class="projects__title">game lookup</h3>
                                     <a href="https://game-lookup.vercel.app/" class="projects__button button button__small">
-                                        <i class="ri-link"><span style="font-family:poppins;"> link</span></i>
+                                        <i class="ri-link"><span style="font-family:poppins; font-size:16px;"> link</span></i>
                                     </a>
                                     <a href="https://github.com/rachelharu/game-wiki-project" target="_blank" class="projects__button button button__small">
-                                        <i class="ri-github-fill"><span style="font-family:poppins;"> github page</span></i>
+                                        <i class="ri-github-fill"><span style="font-family:poppins; font-size:16px;"> github page</span></i>
                                     </a>    
                                 </div>
                             </div>
@@ -124,10 +124,10 @@
                                     <span class="projects__subtitle">html css javascript</span>
                                     <h3 class="projects__title">signup form</h3>
                                     <a href="https://signup-form-azure-eta.vercel.app/" class="projects__button button button__small">
-                                        <i class="ri-link"><span style="font-family:poppins;"> link</span></i>
+                                        <i class="ri-link"><span style="font-family:poppins; font-size:16px;"> link</span></i>
                                     </a>
                                     <a href="https://github.com/rachelharu/signup-form" target="_blank" class="projects__button button button__small">
-                                        <i class="ri-github-fill"><span style="font-family:poppins;"> github page</span></i>
+                                        <i class="ri-github-fill"><span style="font-family:poppins; font-size:16px;"> github page</span></i>
                                     </a>  
                                 </div>
                             </div>
