add target to href

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <div>
                                     <span class="projects__subtitle">node.js express mongodb</span>
                                     <h3 class="projects__title">snack attack</h3>
-                                    <a href="http://snackattack.onrender.com/" class="projects__button button button__small">
+                                    <a href="http://snackattack.onrender.com/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;" > link</span></i> 
                                     </a>
                                     <a href="https://github.com/rachelharu/ecomm-app" target="_blank" class="projects__button button button__small">
@@ -105,7 +105,7 @@
                                 <div>
                                     <span class="projects__subtitle">html css javascript </span>
                                     <h3 class="projects__title">game lookup</h3>
-                                    <a href="https://game-lookup.vercel.app/" class="projects__button button button__small">
+                                    <a href="https://game-lookup.vercel.app/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;"> link</span></i>
                                     </a>
                                     <a href="https://github.com/rachelharu/game-wiki-project" target="_blank" class="projects__button button button__small">
@@ -122,7 +122,7 @@
                                 <div>
                                     <span class="projects__subtitle">html css javascript</span>
                                     <h3 class="projects__title">signup form</h3>
-                                    <a href="https://signup-form-azure-eta.vercel.app/" class="projects__button button button__small">
+                                    <a href="https://signup-form-azure-eta.vercel.app/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;"> link</span></i>
                                     </a>
                                     <a href="https://github.com/rachelharu/signup-form" target="_blank" class="projects__button button button__small">
