change project titles

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">node.js express mongodb</span>
-                                    <h3 class="projects__title">snack attack</h3>
+                                    <h3 class="projects__title">ecommerce shop</h3>
                                     <a href="http://snackattack.onrender.com/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;" > link</span></i> 
                                     </a>
@@ -104,7 +104,7 @@
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">html css javascript </span>
-                                    <h3 class="projects__title">game lookup</h3>
+                                    <h3 class="projects__title">videogame wiki</h3>
                                     <a href="https://game-lookup.vercel.app/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;"> link</span></i>
                                     </a>
