update titles and pictures

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <h3 class="profile__info-number">About Me</h3>
                         <p class="profile__info-description">
                             My love for computers and video games led me to an interest in software development and
-                            I've been developing web apps for 1.5 years. From the moment I spent all night working on my first project I knew that 
+                            I've been developing web apps for about a year. From the moment I spent all night working on my first project I knew that 
                             I had to do everything I could to become a professional developer and
                             I am in search of a place to put my passion and experience to use. If my skill set and goal driven personality would contribute to your team
                             <a href="mailto:rachelharu9@gmail.com?subject=Hi%20Rachel!">contact me</a> -lets work together!
@@ -82,7 +82,7 @@
                     <div class="projects__content grid filters__active" data-content id="projects">
                         
                         <article class="projects__card">
-                            <img src="assets/img/project3.jpg" alt="" class="projects__img" />
+                            <img src="assets/img/project3.png" alt="" class="projects__img" />
 
                             <div class="projects__modal">
                                 <div>
@@ -104,7 +104,7 @@
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">html css javascript </span>
-                                    <h3 class="projects__title">videogame wiki</h3>
+                                    <h3 class="projects__title">video game wiki</h3>
                                     <a href="https://game-lookup.vercel.app/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;"> link</span></i>
                                     </a>
