--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                 <div class="profile__buttons">
                     <!-- CV insert  -->
-                    <a download="" href="assets/pdf/RachelCv.pdf" 
+                    <a download="" href="assets/resume/RachelCv.docx" 
                     class="button">Download CV <i class="ri-file-download-line"></i>
                     </a>   
                 </div>
