--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
                     <div class="projects__content grid filters__active" data-content id="projects">
                         
                         <article class="projects__card">
+                            <img src="assets/img/project4.png" alt="" class="projects__img" />
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">React & Tailwind CSS</span>
+                                    <h3 class="projects__title">landing page</h3>
+                                    <a href="http://reactblogr.onrender.com/" target="_blank" class="projects__button button button__small">
+                                        <i class="ri-link"><span style="font-family:poppins; font-size:16px;" > link</span></i> 
+                                    </a>
+                                    <a href="https://github.com/rachelharu/blogr-reactlandingpage" target="_blank" class="projects__button button button__small">
+                                        <i class="ri-github-fill"><span style="font-family:poppins; font-size:16px;"> github page</span></i>
+                                    </a>    
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="projects__card">
                             <img src="assets/img/project3.png" alt="" class="projects__img" />
 
                             <div class="projects__modal">
@@ -135,20 +152,7 @@
                         <!-- PLACEHOLDERS -->
 
 
-                        <!-- <article class="projects__card">
-                            <img src="assets/img/project4.jpg" alt="" class="projects__img" />
-
-                            <div class="projects__modal">
-                                <div>
-                                    <span class="projects__subtitle">some title</span>
-                                    <h3 class="projects__title">title</h3>
-                                    <a href="#" class="projects__button button button__small">
-                                        <i class="ri-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </article>
-
+                        <!-- 
                         <article class="projects__card">
                             <img src="assets/img/project5.jpg" alt="" class="projects__img" />
 
