--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">node.js express mongodb</span>
+                                    <span class="projects__subtitle">Node.js Express MongoDB</span>
                                     <h3 class="projects__title">ecommerce shop</h3>
                                     <a href="http://snackattack.onrender.com/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;" > link</span></i> 
@@ -120,7 +120,7 @@
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">html css javascript </span>
+                                    <span class="projects__subtitle">HTML CSS Javascript </span>
                                     <h3 class="projects__title">video game wiki</h3>
                                     <a href="https://game-lookup.vercel.app/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;"> link</span></i>
@@ -137,7 +137,7 @@
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">html css javascript</span>
+                                    <span class="projects__subtitle">HTML CSS Javascript</span>
                                     <h3 class="projects__title">signup form</h3>
                                     <a href="https://signup-form-azure-eta.vercel.app/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;"> link</span></i>
