--- a/index.html
+++ b/index.html
@@ -46,9 +46,14 @@
                     <div class="profile__info-group">
                         <h3 class="profile__info-number">About Me</h3>
                         <p class="profile__info-description">
+                            I'm a full-stack focused developer and I've been creating web apps for about 2 years. 
+                            I thrive in creative and team based environments and feel that working together as a team
+                            on a challenging project leads to the most creative outcomes. 
+
                             My love for computers and video games led me to an interest in software development and
-                            I've been developing web apps for about a year. From the moment I spent all night working on my first project I knew that 
-                            I had to do everything I could to become a professional developer and
+                            from the moment I spent all night working on my first project I knew that 
+                            I had to do everything I could to become a professional developer.
+
                             I am in search of a place to put my passion and experience to use. If my skill set and goal driven personality would contribute to your team
                             <a href="mailto:rachelharu9@gmail.com?subject=Hi%20Rachel!">contact me</a> -lets work together!
                             </p>
@@ -104,7 +109,7 @@
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Node.js Express MongoDB</span>
-                                    <h3 class="projects__title">ecommerce shop</h3>
+                                    <h3 class="projects__title">e-commerce shop</h3>
                                     <a href="http://snackattack.onrender.com/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"><span style="font-family:poppins; font-size:16px;" > link</span></i> 
                                     </a>
