--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="profile__info grid">
                     <div class="profile__info-group">
                         <h3 class="profile__info-number">About Me</h3>
-                        <p class="profile__info-description">
+                        <p class="profile__info-description bio">
                             I'm a full-stack focused developer and I've been creating web apps for about 2 years. 
                             I thrive in creative and team based environments and feel that working together as a team
                             on a challenging project leads to the most creative outcomes. 
@@ -56,8 +56,7 @@
 
                             I am in search of a place to put my passion and experience to use. If my skill set and goal driven personality would contribute to your team
                             <a href="mailto:rachelharu9@gmail.com?subject=Hi%20Rachel!">contact me</a> -lets work together!
-                            </p>
-                        </div>
+                        </p>
                 </div>
 
                 <div class="profile__buttons">
