update about me

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 
                             My love for computers and video games led me to an interest in software development and
                             from the moment I spent all night working on my first project I knew that 
-                            I had to do everything I could to become a professional developer.
-
+                            I had to do everything I could to become a professional developer and
                             I am in search of a place to put my passion and experience to use. If my skill set and goal driven personality would contribute to your team
                             <a href="mailto:rachelharu9@gmail.com?subject=Hi%20Rachel!">contact me</a> -lets work together!
                         </p>
