--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
                 <div class="profile__buttons">
                     <!-- CV insert  -->
-                    <a download="" href="assets/resume/RachelCv.pdf" 
+                    <!-- <a download="" href="assets/resume/RachelCv.pdf" 
                     class="button">Download CV <i class="ri-file-download-line"></i>
-                    </a>   
+                    </a>    -->
                 </div>
             </div>
         </header>
