--- a/index.html
+++ b/index.html
@@ -47,13 +47,9 @@
                         <h3 class="profile__info-number">About Me</h3>
                         <p class="profile__info-description bio">
                             I'm a full-stack focused developer and I've been creating web apps for about 2 years. 
-                            I thrive in creative and team based environments and feel that working together as a team
-                            on a challenging project leads to the most creative outcomes. 
-
-                            My love for computers and video games led me to an interest in software development and
-                            from the moment I spent all night working on my first project I knew that 
-                            I had to do everything I could to become a professional developer and
-                            I am in search of a place to put my passion and experience to use. If my skill set and goal driven personality would contribute to your team
+                            I am in the process of finishing my degree in Software Engineering and
+                            I'm in search of a place to put my passion and experience to use. If my skill set and 
+                            goal driven personality would contribute to your team
                             <a href="https://linkedin.com/in/raeu">contact me</a> -lets work together!
                         </p>
                 </div>
